# VIU_TFM_Code

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: e8ec9257d77e_initial_schema.py  fafe07a72da6_change_embedding_dimension_to_768.py
docs/: agent_graph.mmd  architecture_general.mmd  rag_evaluation_results.json  sequence_diagram.mmd
notebooks/: rag_evaluation.ipynb
scripts/: fetch_daily_news.py  gen_fig7.py  gen_fig8.py  gen_fig_agent_router.py  gen_fig_rag_pipeline.py  setup_database.py  test_agent.py  test_api.py  test_bot.py  test_connectors.py  test_generation.py  test_llm.py  test_processing.py
src/agent/: __init__.py  graph.py  state.py
src/agent/nodes/: __init__.py  check_existing.py  cluster.py  deduplicate.py  embed.py  fetch.py  filter.py  generate.py  load_similar.py  quality.py  save.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routes/: __init__.py  agent.py  ask.py  news.py
src/bot/: __init__.py  config.py  keyboards.py  main.py  utils.py
src/bot/handlers/: __init__.py  ask.py  news.py  start.py
src/config/: settings.py
src/connectors/: __init__.py  aggregator.py  base.py  gnews.py  newsapi.py  rss.py
src/generation/: __init__.py  angles.py  headlines.py  quality_checker.py  summarizer.py
src/generation/prompts/: __init__.py  angle.py  headline.py  summary.py
src/llm/: __init__.py  base.py  deepseek.py  factory.py  lm_studio.py
src/processing/: __init__.py  clustering.py  deduplication.py  embeddings.py  filters.py  similarity.py
src/rag/: __init__.py  engine.py  generator.py  retriever.py
src/router/: __init__.py  query_router.py
src/storage/: database.py  models.py
src/storage/repositories/: article.py  processed.py  session.py
