[tool.poetry]
name = "journalist-agent"
version = "0.1.0"
description = "AI Agent for journalistic workflows - TFM VIU"
authors = ["Daniel Zapata Grajales"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# === Framework de Agentes ===
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"

# === Cliente LLM (compatible con LM Studio y DeepSeek) ===
openai = "^1.40.0"

# === Embeddings y Vectores ===
sentence-transformers = "^3.0.0"
numpy = "^1.26.0"

# === Clustering y Reducción Dimensional ===
hdbscan = "^0.8.33"
umap-learn = "^0.5.5"
scikit-learn = "^1.4.0"

# === Base de Datos ===
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"
alembic = "^1.13.0"

# === APIs de Noticias ===
newsapi-python = "^0.2.7"
feedparser = "^6.0.10"
httpx = "^0.27.0"

# === Utilidades ===
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
tenacity = "^8.2.0"

# === Evaluación ===
rouge-score = "^0.1.2"

# === API REST ===
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

# === Bot Telegram ===
aiogram = "^3.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

# === Notebooks y visualización ===
pandas = "^2.2.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
